tests/Semantic/test_2_r13.out
Error type 13 at Line 19: accessing with non-struct variable
Error type 13 at Line 19: accessing with non-struct variable
